--- a/CS310/divtags/static/divtags/css/sandbox.css
+++ b/CS310/divtags/static/divtags/css/sandbox.css
@@ -10,9 +10,6 @@
 	border-style: dashed;
 	cursor: text !important;
 	position: relative;
-/*	resize: both;
-	overflow: auto;
-*/
 }
 
 .resizer { 
@@ -58,6 +55,36 @@
 	font-size: 15px;
 }
 
+.refresh { 
+	width: 15px; 
+	height: 15px; 
+	line-height:15px;
+	background-color: #ffffff;
+	/* border: 1px solid black;  */
+	position: absolute; 
+	top: 55px; 
+	left: -30px; 
+	cursor: pointer; 
+	color: #000000;
+	font-size: 15px;
+}
+
+.editText { 
+	width: 100px; 
+	height: 25px; 
+	line-height:25px;
+	background-color: #ffffff;
+	/* border: 1px solid black;  */
+	position: absolute; 
+	top: -30px; 
+	left: 5px; 
+	cursor: pointer; 
+	color: #000000;
+	font-size: 15px;
+	padding-left:5px;
+	z-index: 1000;
+}
+
 .delete {
 	width: 15px; 
 	height: 15px; 
@@ -79,7 +106,7 @@
 
 .element-editor {
 	position: absolute;
-	top: 20px;
+	top: 80px;
 	right: 20px;
 	width: 150px;
 	background-color: #d9d9d9;
@@ -87,5 +114,38 @@
 }
 
 .element-padding {
-	width: 40px;
+	width: 75px;
+	background-color: rgb(63,64,64) !important;
+	border: 0px !important;
+	color: #ffffff !important;
+}
+
+.element-colors {
+	background-color: rgb(63,64,64) !important;
+	border: 0px !important;
+	width:75px !important;
+}
+
+.user-header {
+	position: fixed;
+	top: 60px;
+	width: 100%;
+	height: 60px;
+	background-color: #ffffff;
+	padding-left: 15%;
+	padding-right: 15%;
+	z-index: 100;
+}
+
+#user-menu {
+	float: right;
+}
+
+#user-menu-pages-list li {
+	text-decoration: none;
+	display: inline;
+	line-height: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 20px;
 }
